--- a/ui/Home.ui
+++ b/ui/Home.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1670</width>
-    <height>840</height>
+    <width>1621</width>
+    <height>935</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -130,13 +130,27 @@ QCommandLinkButton:checked
 {
 	background-color: green;
 }
+QLabel[style=&quot;danger&quot;]
+{
+	background-color: rgba(224, 27, 36,255);
+	color: white;
+	border: 1px solid darkRed;
+	border-radius: 4px;
+}
+QLabel:disabled[style=&quot;danger&quot;]
+{
+	background-color: rgb(192, 191, 188);
+	color: gray;
+	border: 1px solid rgb(154, 153, 150);
+	border-radius: 4px;
+}
 </string>
   </property>
   <widget class="Animation" name="mixer_1">
    <property name="geometry">
     <rect>
-     <x>1148</x>
-     <y>591</y>
+     <x>848</x>
+     <y>681</y>
      <width>247</width>
      <height>175</height>
     </rect>
@@ -223,8 +237,8 @@ QCommandLinkButton:checked
   <widget class="Animation" name="mgate_1">
    <property name="geometry">
     <rect>
-     <x>1103</x>
-     <y>692</y>
+     <x>803</x>
+     <y>782</y>
      <width>114</width>
      <height>137</height>
     </rect>
@@ -241,8 +255,8 @@ QCommandLinkButton:checked
   <widget class="MixerPanel" name="mixerpanel">
    <property name="geometry">
     <rect>
-     <x>1140</x>
-     <y>760</y>
+     <x>840</x>
+     <y>850</y>
      <width>272</width>
      <height>71</height>
     </rect>
@@ -254,7 +268,7 @@ QCommandLinkButton:checked
   <widget class="Animation" name="dosator_1">
    <property name="geometry">
     <rect>
-     <x>1101</x>
+     <x>1059</x>
      <y>252</y>
      <width>113</width>
      <height>238</height>
@@ -334,7 +348,7 @@ QCommandLinkButton:checked
   <widget class="DosatorPanel" name="dpanel_1">
    <property name="geometry">
     <rect>
-     <x>1089</x>
+     <x>1047</x>
      <y>259</y>
      <width>130</width>
      <height>60</height>
@@ -347,7 +361,7 @@ QCommandLinkButton:checked
   <widget class="Animation" name="container_1">
    <property name="geometry">
     <rect>
-     <x>1099</x>
+     <x>1047</x>
      <y>158</y>
      <width>106</width>
      <height>50</height>
@@ -384,7 +398,7 @@ QCommandLinkButton:checked
   <widget class="DoserPanel" name="cpanel_1">
    <property name="geometry">
     <rect>
-     <x>1090</x>
+     <x>1048</x>
      <y>10</y>
      <width>130</width>
      <height>100</height>
@@ -397,7 +411,7 @@ QCommandLinkButton:checked
   <widget class="DoserPanel" name="cpanel_2">
    <property name="geometry">
     <rect>
-     <x>1228</x>
+     <x>1186</x>
      <y>10</y>
      <width>130</width>
      <height>100</height>
@@ -410,7 +424,7 @@ QCommandLinkButton:checked
   <widget class="Animation" name="container_2">
    <property name="geometry">
     <rect>
-     <x>1237</x>
+     <x>1189</x>
      <y>158</y>
      <width>106</width>
      <height>50</height>
@@ -447,7 +461,7 @@ QCommandLinkButton:checked
   <widget class="Animation" name="dosator_2">
    <property name="geometry">
     <rect>
-     <x>1239</x>
+     <x>1197</x>
      <y>252</y>
      <width>113</width>
      <height>238</height>
@@ -527,7 +541,7 @@ QCommandLinkButton:checked
   <widget class="DosatorPanel" name="dpanel_2">
    <property name="geometry">
     <rect>
-     <x>1229</x>
+     <x>1187</x>
      <y>259</y>
      <width>130</width>
      <height>60</height>
@@ -540,7 +554,7 @@ QCommandLinkButton:checked
   <widget class="DosatorPanel" name="dpanel_3">
    <property name="geometry">
     <rect>
-     <x>1369</x>
+     <x>1327</x>
      <y>259</y>
      <width>130</width>
      <height>60</height>
@@ -553,7 +567,7 @@ QCommandLinkButton:checked
   <widget class="Animation" name="dosator_3">
    <property name="geometry">
     <rect>
-     <x>1374</x>
+     <x>1332</x>
      <y>252</y>
      <width>113</width>
      <height>238</height>
@@ -633,7 +647,7 @@ QCommandLinkButton:checked
   <widget class="DoserPanel" name="cpanel_3">
    <property name="geometry">
     <rect>
-     <x>1363</x>
+     <x>1321</x>
      <y>10</y>
      <width>130</width>
      <height>100</height>
@@ -646,7 +660,7 @@ QCommandLinkButton:checked
   <widget class="Animation" name="container_3">
    <property name="geometry">
     <rect>
-     <x>1372</x>
+     <x>1324</x>
      <y>158</y>
      <width>106</width>
      <height>50</height>
@@ -683,7 +697,7 @@ QCommandLinkButton:checked
   <widget class="DosatorPanel" name="dpanel_4">
    <property name="geometry">
     <rect>
-     <x>1508</x>
+     <x>1461</x>
      <y>259</y>
      <width>130</width>
      <height>60</height>
@@ -696,7 +710,7 @@ QCommandLinkButton:checked
   <widget class="Animation" name="dosator_4">
    <property name="geometry">
     <rect>
-     <x>1518</x>
+     <x>1471</x>
      <y>252</y>
      <width>115</width>
      <height>174</height>
@@ -739,7 +753,7 @@ QCommandLinkButton:checked
   <widget class="DoserPanel" name="cpanel_4">
    <property name="geometry">
     <rect>
-     <x>1512</x>
+     <x>1457</x>
      <y>10</y>
      <width>130</width>
      <height>100</height>
@@ -752,7 +766,7 @@ QCommandLinkButton:checked
   <widget class="Animation" name="container_4">
    <property name="geometry">
     <rect>
-     <x>1492</x>
+     <x>1445</x>
      <y>140</y>
      <width>84</width>
      <height>82</height>
@@ -789,7 +803,7 @@ QCommandLinkButton:checked
   <widget class="Animation" name="animation_5">
    <property name="geometry">
     <rect>
-     <x>1559</x>
+     <x>1512</x>
      <y>418</y>
      <width>32</width>
      <height>95</height>
@@ -807,7 +821,7 @@ QCommandLinkButton:checked
   <widget class="Animation" name="container_5">
    <property name="geometry">
     <rect>
-     <x>1572</x>
+     <x>1525</x>
      <y>141</y>
      <width>84</width>
      <height>82</height>
@@ -2327,7 +2341,7 @@ QCommandLinkButton:checked
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>580</y>
+     <y>572</y>
      <width>392</width>
      <height>54</height>
     </rect>
@@ -2341,8 +2355,8 @@ QCommandLinkButton:checked
   <widget class="Animation" name="conveyor_2">
    <property name="geometry">
     <rect>
-     <x>660</x>
-     <y>470</y>
+     <x>680</x>
+     <y>460</y>
      <width>201</width>
      <height>204</height>
     </rect>
@@ -2356,8 +2370,8 @@ QCommandLinkButton:checked
   <widget class="Animation" name="mcontainer_1">
    <property name="geometry">
     <rect>
-     <x>892</x>
-     <y>218</y>
+     <x>882</x>
+     <y>438</y>
      <width>176</width>
      <height>248</height>
     </rect>
@@ -2455,8 +2469,8 @@ QCommandLinkButton:checked
   <widget class="MContainerPanel" name="mcontainerpanel">
    <property name="geometry">
     <rect>
-     <x>875</x>
-     <y>9</y>
+     <x>860</x>
+     <y>350</y>
      <width>204</width>
      <height>93</height>
     </rect>
@@ -2465,8 +2479,8 @@ QCommandLinkButton:checked
   <widget class="TConveyorPanel" name="tconveyorpanel">
    <property name="geometry">
     <rect>
-     <x>880</x>
-     <y>478</y>
+     <x>340</x>
+     <y>650</y>
      <width>204</width>
      <height>93</height>
     </rect>
@@ -2475,8 +2489,8 @@ QCommandLinkButton:checked
   <widget class="QLabel" name="scanTime">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>782</y>
+     <x>1520</x>
+     <y>877</y>
      <width>66</width>
      <height>19</height>
     </rect>
@@ -2494,8 +2508,8 @@ QCommandLinkButton:checked
   <widget class="QLabel" name="powered">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>801</y>
+     <x>1520</x>
+     <y>896</y>
      <width>66</width>
      <height>19</height>
     </rect>
@@ -2513,8 +2527,8 @@ QCommandLinkButton:checked
   <widget class="QPushButton" name="ack_1">
    <property name="geometry">
     <rect>
-     <x>1130</x>
-     <y>420</y>
+     <x>1088</x>
+     <y>438</y>
      <width>54</width>
      <height>50</height>
     </rect>
@@ -2539,8 +2553,8 @@ QCommandLinkButton:checked
   <widget class="QPushButton" name="ack_2">
    <property name="geometry">
     <rect>
-     <x>1267</x>
-     <y>420</y>
+     <x>1226</x>
+     <y>438</y>
      <width>54</width>
      <height>50</height>
     </rect>
@@ -2565,8 +2579,8 @@ QCommandLinkButton:checked
   <widget class="QPushButton" name="ack_3">
    <property name="geometry">
     <rect>
-     <x>1402</x>
-     <y>420</y>
+     <x>1360</x>
+     <y>438</y>
      <width>54</width>
      <height>50</height>
     </rect>
@@ -2591,8 +2605,8 @@ QCommandLinkButton:checked
   <widget class="QPushButton" name="ack_4">
    <property name="geometry">
     <rect>
-     <x>1551</x>
-     <y>420</y>
+     <x>1504</x>
+     <y>438</y>
      <width>54</width>
      <height>50</height>
     </rect>
@@ -2617,8 +2631,8 @@ QCommandLinkButton:checked
   <widget class="QPushButton" name="ack_5">
    <property name="geometry">
     <rect>
-     <x>46</x>
-     <y>420</y>
+     <x>47</x>
+     <y>434</y>
      <width>54</width>
      <height>50</height>
     </rect>
@@ -2643,8 +2657,8 @@ QCommandLinkButton:checked
   <widget class="QPushButton" name="ack_6">
    <property name="geometry">
     <rect>
-     <x>189</x>
-     <y>420</y>
+     <x>193</x>
+     <y>434</y>
      <width>54</width>
      <height>50</height>
     </rect>
@@ -2670,7 +2684,7 @@ QCommandLinkButton:checked
    <property name="geometry">
     <rect>
      <x>337</x>
-     <y>420</y>
+     <y>434</y>
      <width>54</width>
      <height>50</height>
     </rect>
@@ -2696,7 +2710,7 @@ QCommandLinkButton:checked
    <property name="geometry">
     <rect>
      <x>482</x>
-     <y>420</y>
+     <y>434</y>
      <width>54</width>
      <height>50</height>
     </rect>
@@ -2721,8 +2735,8 @@ QCommandLinkButton:checked
   <widget class="QPushButton" name="ack_9">
    <property name="geometry">
     <rect>
-     <x>623</x>
-     <y>420</y>
+     <x>628</x>
+     <y>434</y>
      <width>54</width>
      <height>50</height>
     </rect>
@@ -2748,7 +2762,7 @@ QCommandLinkButton:checked
    <property name="geometry">
     <rect>
      <x>770</x>
-     <y>420</y>
+     <y>434</y>
      <width>54</width>
      <height>50</height>
     </rect>
@@ -2773,8 +2787,8 @@ QCommandLinkButton:checked
   <widget class="QLabel" name="heartbeat">
    <property name="geometry">
     <rect>
-     <x>75</x>
-     <y>785</y>
+     <x>1490</x>
+     <y>880</y>
      <width>32</width>
      <height>32</height>
     </rect>
@@ -2795,17 +2809,17 @@ QCommandLinkButton:checked
     <string>badge</string>
    </property>
   </widget>
-  <widget class="QCommandLinkButton" name="filter_1">
+  <widget class="QPushButton" name="filter_1">
    <property name="geometry">
     <rect>
-     <x>897</x>
-     <y>190</y>
-     <width>163</width>
-     <height>66</height>
+     <x>1440</x>
+     <y>880</y>
+     <width>38</width>
+     <height>34</height>
     </rect>
    </property>
    <property name="text">
-    <string>ВКЛЮЧИТЬ</string>
+    <string/>
    </property>
    <property name="icon">
     <iconset resource="../images.qrc">
@@ -2813,22 +2827,22 @@ QCommandLinkButton:checked
    </property>
    <property name="iconSize">
     <size>
-     <width>48</width>
-     <height>48</height>
+     <width>32</width>
+     <height>32</height>
     </size>
    </property>
    <property name="checkable">
     <bool>true</bool>
    </property>
-   <property name="description">
-    <string>фильтр</string>
+   <property name="flat">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="forbid_1">
    <property name="geometry">
     <rect>
-     <x>1060</x>
-     <y>620</y>
+     <x>760</x>
+     <y>710</y>
      <width>125</width>
      <height>40</height>
     </rect>
@@ -2849,8 +2863,8 @@ QCommandLinkButton:checked
   <widget class="QPushButton" name="breakpoint_1">
    <property name="geometry">
     <rect>
-     <x>1360</x>
-     <y>620</y>
+     <x>1060</x>
+     <y>710</y>
      <width>125</width>
      <height>40</height>
     </rect>
@@ -2871,8 +2885,8 @@ QCommandLinkButton:checked
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>1210</x>
-     <y>557</y>
+     <x>910</x>
+     <y>650</y>
      <width>113</width>
      <height>39</height>
     </rect>
@@ -2896,7 +2910,7 @@ QCommandLinkButton:checked
    <property name="geometry">
     <rect>
      <x>360</x>
-     <y>638</y>
+     <y>590</y>
      <width>150</width>
      <height>19</height>
     </rect>
@@ -2909,6 +2923,50 @@ QCommandLinkButton:checked
    </property>
    <property name="style" stdset="0">
     <string>sys</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>860</y>
+     <width>140</width>
+     <height>65</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>ТРОС КОНВЕЙЕРА</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
+   <property name="style" stdset="0">
+    <string>danger</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>860</y>
+     <width>140</width>
+     <height>63</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>ТРОС ТРАНСПОРТНОГО</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
+   <property name="style" stdset="0">
+    <string>danger</string>
    </property>
   </widget>
   <zorder>dosator_5</zorder>
@@ -3003,6 +3061,8 @@ QCommandLinkButton:checked
   <zorder>breakpoint_1</zorder>
   <zorder>lineEdit</zorder>
   <zorder>unloading</zorder>
+  <zorder>label_3</zorder>
+  <zorder>label_4</zorder>
  </widget>
  <customwidgets>
   <customwidget>
