--- a/ui/Home.ui
+++ b/ui/Home.ui
@@ -31,6 +31,11 @@ QAbstractButton:flat:pressed
 {
 	background-color: green;
 }
+QAbstractButton:flat:checked
+{
+	background-color: green;
+}
+
 QAbstractButton:flat[style=&quot;open&quot;]
 {
 	image: url(:/concrete/stop.png);
@@ -69,6 +74,11 @@ QLabel[style=&quot;badge&quot;]
 	color: white;
 	border-radius: 4px;
 }
+QLabel:disabled[style=&quot;badge&quot;]
+{
+	border-color: gray;
+}
+
 QLabel[style=&quot;vodoley-status&quot;]
 {
 	border: none;
@@ -1813,13 +1823,13 @@ QLabel:disabled[style=&quot;danger&quot;]
       <height>33</height>
      </rect>
     </property>
+    <property name="running">
+     <bool>true</bool>
+    </property>
     <property name="source">
      <url>
       <string>qrc:/concrete/fillers-rain.mng</string>
      </url>
-    </property>
-    <property name="running">
-     <bool>true</bool>
     </property>
     <property name="playbackHints">
      <set>Animation::Ceaseless</set>
@@ -1925,13 +1935,13 @@ QLabel:disabled[style=&quot;danger&quot;]
       <height>33</height>
      </rect>
     </property>
+    <property name="running">
+     <bool>true</bool>
+    </property>
     <property name="source">
      <url>
       <string>qrc:/concrete/fillers-rain.mng</string>
      </url>
-    </property>
-    <property name="running">
-     <bool>true</bool>
     </property>
     <property name="playbackHints">
      <set>Animation::Ceaseless</set>
@@ -2024,13 +2034,13 @@ QLabel:disabled[style=&quot;danger&quot;]
       <height>33</height>
      </rect>
     </property>
+    <property name="running">
+     <bool>true</bool>
+    </property>
     <property name="source">
      <url>
       <string>qrc:/concrete/fillers-rain.mng</string>
      </url>
-    </property>
-    <property name="running">
-     <bool>true</bool>
     </property>
     <property name="playbackHints">
      <set>Animation::Ceaseless</set>
@@ -2123,13 +2133,13 @@ QLabel:disabled[style=&quot;danger&quot;]
       <height>33</height>
      </rect>
     </property>
+    <property name="running">
+     <bool>true</bool>
+    </property>
     <property name="source">
      <url>
       <string>qrc:/concrete/fillers-rain.mng</string>
      </url>
-    </property>
-    <property name="running">
-     <bool>true</bool>
     </property>
     <property name="playbackHints">
      <set>Animation::Ceaseless</set>
@@ -2222,13 +2232,13 @@ QLabel:disabled[style=&quot;danger&quot;]
       <height>33</height>
      </rect>
     </property>
+    <property name="running">
+     <bool>true</bool>
+    </property>
     <property name="source">
      <url>
       <string>qrc:/concrete/fillers-rain.mng</string>
      </url>
-    </property>
-    <property name="running">
-     <bool>true</bool>
     </property>
     <property name="playbackHints">
      <set>Animation::Ceaseless</set>
@@ -2321,13 +2331,13 @@ QLabel:disabled[style=&quot;danger&quot;]
       <height>33</height>
      </rect>
     </property>
+    <property name="running">
+     <bool>true</bool>
+    </property>
     <property name="source">
      <url>
       <string>qrc:/concrete/fillers-rain.mng</string>
      </url>
-    </property>
-    <property name="running">
-     <bool>true</bool>
     </property>
     <property name="playbackHints">
      <set>Animation::Ceaseless</set>
@@ -2415,13 +2425,13 @@ QLabel:disabled[style=&quot;danger&quot;]
       <height>33</height>
      </rect>
     </property>
+    <property name="running">
+     <bool>true</bool>
+    </property>
     <property name="source">
      <url>
       <string>qrc:/concrete/fillers-rain.mng</string>
      </url>
-    </property>
-    <property name="running">
-     <bool>true</bool>
     </property>
     <property name="playbackHints">
      <set>Animation::Ceaseless</set>
@@ -2789,8 +2799,8 @@ QLabel:disabled[style=&quot;danger&quot;]
     <rect>
      <x>1490</x>
      <y>880</y>
-     <width>32</width>
-     <height>32</height>
+     <width>42</width>
+     <height>42</height>
     </rect>
    </property>
    <property name="toolTip">
@@ -2814,9 +2824,18 @@ QLabel:disabled[style=&quot;danger&quot;]
     <rect>
      <x>1440</x>
      <y>880</y>
-     <width>38</width>
-     <height>34</height>
+     <width>42</width>
+     <height>42</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton:flat
+{
+	border: 1px solid lightGray;
+}</string>
    </property>
    <property name="text">
     <string/>
@@ -2836,6 +2855,9 @@ QLabel:disabled[style=&quot;danger&quot;]
    </property>
    <property name="flat">
     <bool>true</bool>
+   </property>
+   <property name="style" stdset="0">
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="forbid_1">
